--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "build": "prisma generate && tsc",
+    "start": "node dist/index.js",
+    "postinstall": "prisma generate"
   },
   "author": "Wahyu Rifia",
   "license": "ISC",
